# aoc-2023

./: Cargo.toml  flake.nix
day-1/: Cargo.toml
day-1/src/: main.rs
day-10/: Cargo.toml
day-10/src/: main.rs
day-11/: Cargo.toml
day-11/src/: main.rs
day-12/: Cargo.toml
day-12/src/: main.rs
day-13/: Cargo.toml
day-13/src/: main.rs
day-14/: Cargo.toml
day-14/src/: main.rs
day-15/: Cargo.toml
day-15/src/: main.rs
day-16/: Cargo.toml
day-16/src/: main.rs
day-17/: Cargo.toml
day-17/src/: main.rs
day-18/: Cargo.toml
day-18/src/: main.rs
day-19/: Cargo.toml
day-19/src/: args.rs  main.rs
day-2/: Cargo.toml
day-2/src/: main.rs
day-20/: Cargo.toml
day-20/src/: args.rs  main.rs
day-3/: Cargo.toml
day-3/src/: main.rs
day-4/: Cargo.toml
day-4/src/: main.rs
day-5/: Cargo.toml
day-5/src/: main.rs
day-6/: Cargo.toml
day-6/src/: main.rs
day-7/: Cargo.toml
day-7/src/: main.rs
day-8/: Cargo.toml
day-8/src/: main.rs
day-9/: Cargo.toml
day-9/src/: main.rs
