[package]
name = "day-8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aoc_input = "0.2.2"
clap = { version = "4.4.11", features = ["derive"] }
num = { version = "0.4.1", features = ["num-bigint"] }
regex = "1.10.2"
